# hermitbench-fastapi

./: .gitignore  .replit  BUILD-A-USER-AGENT-FLASK-APP.md  README.md  alembic.ini  clean-git-then-delete-this-script.sh  detailed_scorecard_batch_668267ad.json  detailed_scorecard_batch_71056fa5.json  external_tester.sh  hermitbench_summary_batch_668267ad.csv  main.py  openrouter_models.json  openrouter_test_response.json  persona_cards.json  pyproject.toml  replit.md  results.json  summary_report.csv  test_openrouter.py  test_prompts.py
app/: __init__.py  config.py  database.py  db_models.py  factory.py  models.py
app/api/: __init__.py  models.py  routes.py
app/core/: __init__.py  evaluator.py  hermit_bench.py  openrouter.py
app/utils/: __init__.py  helpers.py  prompt_loader.py
attached_assets/: HermitBench.html  Pasted--workspace-tree-I-node-modules-attached-assets-tree-command-not-installed-Multiple-versions-o-1747850765136.txt  Pasted-Dynamic-Prompt-System-in-Autonomous-LLM-Interaction-Runner-Overview-of-Curly-Bracket-Mechanism-After-1747851297304.txt
migrations/: env.py
migrations/versions/: __init__.py  e33536a68da4_initial_migration.py
prompts/: initial_prompt.json  judge_evaluation_prompt.json  judge_system_prompt.json  persona_card_prompt.json  thematic_synthesis_prompt.json
test_outputs/20250521_182158/: metadata.json
test_outputs/20250521_182158/personas/: openai_gpt-3.5-turbo_persona.json  openai_gpt-4_persona.json  persona_cards.json  summary.txt
tests/: __init__.py  test_api.py  test_hermit_bench.py
(+10 files in other folders)
