[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.15.2",
    "python-dotenv>=1.1.0",
]
